--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
 		<junit.version>4.13.1</junit.version>
 		<cucumber.version>6.9.0</cucumber.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
-		<maven.surefire.version>2.22.2</maven.surefire.version>		
+		<maven.surefire.version>2.22.2</maven.surefire.version>
 	</properties>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
 			<artifactId>extentreports-cucumber6-adapter</artifactId>
-			<version>2.6.0</version>
+			<version>2.8.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -91,6 +91,12 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -120,7 +126,7 @@
 					<useUnlimitedThreads>false</useUnlimitedThreads>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 </project>
