--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,29 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<junit.version>4.13.1</junit.version>
-		<cucumber.version>6.9.0</cucumber.version>
+		<junit.version>4.13.2</junit.version>
+		<cucumber.version>7.15.0</cucumber.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
-		<maven.surefire.version>2.22.2</maven.surefire.version>
+		<maven.surefire.version>3.0.0-M8</maven.surefire.version>
+		<testng.version>7.9.0</testng.version>
+		<allure.junit4.version>2.25.0</allure.junit4.version>
+		<aspectj.version>1.9.21</aspectj.version>
+	    <allure.version>2.25.0</allure.version>
+	    <allure.maven>2.12.0</allure.maven>
 	</properties>
-
+	
+		<dependencyManagement>
+	    <dependencies>
+	      <dependency>
+	        <groupId>io.qameta.allure</groupId>
+	        <artifactId>allure-bom</artifactId>
+	        <version>${allure.version}</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	    </dependencies>
+	  </dependencyManagement>
+  
 	<dependencies>
 
 		<dependency>
@@ -59,15 +76,15 @@
 
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
-			<artifactId>extentreports-cucumber6-adapter</artifactId>
-			<version>2.8.0</version>
+			<artifactId>extentreports-cucumber7-adapter</artifactId>
+			<version>1.14.0</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.14.3</version>
+			<version>${testng.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -97,6 +114,21 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.22</version>
 		</dependency>
+			
+			<!--Allure Cucumber Dependency-->
+	    <dependency>
+	      <groupId>io.qameta.allure</groupId>
+	      <artifactId>allure-cucumber7-jvm</artifactId>
+	      <scope>test</scope>
+	    </dependency>
+	 
+	    <!--Allure Reporting Dependency-->
+	    <dependency>
+	      <groupId>io.qameta.allure</groupId>
+	      <artifactId>allure-testng</artifactId>
+	      <scope>test</scope>
+	    </dependency>
+    
 	</dependencies>
 
 	<build>
@@ -124,9 +156,34 @@
 					<parallel>methods</parallel>
 					<threadCount>4</threadCount>
 					<useUnlimitedThreads>false</useUnlimitedThreads>
+					
+					<argLine>
+           				 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          			     -Dcucumber.options="--plugin
+          			     io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
+          			</argLine>
+          
 				</configuration>
+				
+				<dependencies>
+		          <dependency>
+		            <groupId>org.aspectj</groupId>
+		            <artifactId>aspectjweaver</artifactId>
+		            <version>${aspectj.version}</version>
+		            <scope>runtime</scope>
+		          </dependency>
+		        </dependencies>
+        
 			</plugin>
-
+			<plugin>
+		        <groupId>io.qameta.allure</groupId>
+		        <artifactId>allure-maven</artifactId>
+		        <version>${allure.maven}</version>
+		        <configuration>
+		          <reportVersion>${allure.maven}</reportVersion>
+		        </configuration>
+		      </plugin>
+      
 		</plugins>
 	</build>
 </project>
