--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       continue-on-error: true
       with:
         ref: gh-pages
-        path: gh-pages
+        path: PresviousTestResults
 
     - name: Build test report
       uses: simple-elf/allure-report-action@v1.7
