--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       uses: simple-elf/allure-report-action@v1.7
       if: always()
       with:
-        gh_pages: gh-pages
+        gh_pages: PresviousTestResults
         allure_history: allure-history
         allure_results: build/allure-results
 
