--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,13 @@ jobs:
       continue-on-error: true
       with:
         ref: gh-pages
-        path: PresviousTestResults
+        path: gh-pages
 
     - name: Build test report
       uses: simple-elf/allure-report-action@v1.7
       if: always()
       with:
-        gh_pages: PresviousTestResults
+        gh_pages: gh-pages
         allure_history: allure-history
         allure_results: build/allure-results
 
