--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,19 +37,19 @@ jobs:
       uses: actions/checkout@v2
       if: always()
       continue-on-error: true
-      with:
+       with:
         ref: gh-pages
         path: gh-pages
         
-    - name: Test local action
-      uses: ./allure-report-action
+    - name: Generate Allure Report
+      uses: simple-elf/allure-report-action@master
       if: always()
       id: allure-report
       with:
-        allure_results: allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
-        allure_history: allure-history
+         allure_results: build/allure-results
+         gh_pages: gh-pages
+         allure_report: allure-report
+         allure_history: allure-history
         
     - name: Deploy report to Github Pages
       if: always()
