--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       uses: actions/checkout@v2
       if: always()
       continue-on-error: true
-       with:
+      with:
         ref: gh-pages
         path: gh-pages
         
@@ -46,7 +46,7 @@ jobs:
       if: always()
       id: allure-report
       with:
-         allure_results: build/allure-results
+         allure_results: allure-results
          gh_pages: gh-pages
          allure_report: allure-report
          allure_history: allure-history
