--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       run: mvn clean install
       
     - name: Get Allure history
-      uses: actions/checkout@v2
+      uses: actions/checkout@master
       if: always()
       continue-on-error: true
       with:
@@ -53,7 +53,7 @@ jobs:
         
     - name: Deploy report to Github Pages
       if: always()
-      uses: peaceiris/actions-gh-pages@v2
+      uses: peaceiris/actions-gh-pages@master
       env:
         PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
@@ -61,7 +61,7 @@ jobs:
         
     - name: Post the link to the report
       if: always()
-      uses: Sibz/github-status-action@v1
+      uses: Sibz/github-status-action@master
       with: 
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: 'Test report'
