--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       run: mvn clean install
       
     - name: Get Allure history
-      uses: actions/checkout@master
+      uses: actions/checkout@v3
       if: always()
       continue-on-error: true
       with:
@@ -42,7 +42,7 @@ jobs:
         path: gh-pages
         
     - name: Generate Allure Report
-      uses: simple-elf/allure-report-action@master
+      uses: simple-elf/allure-report-action@v1.8
       if: always()
       id: allure-report
       with:
@@ -53,7 +53,7 @@ jobs:
         
     - name: Deploy report to Github Pages
       if: always()
-      uses: peaceiris/actions-gh-pages@master
+      uses: peaceiris/actions-gh-pages@v3
       env:
         PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
@@ -61,7 +61,7 @@ jobs:
         
     - name: Post the link to the report
       if: always()
-      uses: Sibz/github-status-action@master
+      uses: Sibz/github-status-action@v1
       with: 
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: 'Test report'
