--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,14 +50,14 @@ jobs:
          gh_pages: gh-pages
          allure_report: allure-report
          allure_history: allure-history
-        
-    - name: Deploy report to Github Pages
-      if: always()
+         
+    - name: Publish test report
       uses: peaceiris/actions-gh-pages@v3
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history
+      if: always()
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: allure-history 
         
     - name: Post the link to the report
       if: always()
