--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
          allure_report: allure-report
          allure_history: allure-history
          
-    - name: Publish test report
+    - name: Publish Allure Report
       uses: peaceiris/actions-gh-pages@v3
       if: always()
       with:
