--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
 				<version>${maven.surefire.version}</version>
 				<configuration>
 					<includes>
-						<include>**/TestRunner.java</include>
+						<include>**/ParallelRun.java</include>
 					</includes>
 					<parallel>methods</parallel>
 					<threadCount>4</threadCount>
