--- a/docker-compose-v3.yml
+++ b/docker-compose-v3.yml
@@ -13,6 +13,8 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - NODE_MAX_INSTANCE=5
+      - NODE_MAX_SESSION=5
     ports:
       - "6900:5900"
 
@@ -26,6 +28,8 @@ services:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - NODE_MAX_INSTANCE=5
+      - NODE_MAX_SESSION=5
     ports:
       - "6901:5900"
 
