--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       run: docker --version
       
     - name: Start Docker
-      run: docker-compose -f docker-compose-v3.yml up 
+      run: docker-compose -f docker-compose-v3.yml up -d
       
     - name: Build with Maven
       run: mvn clean install
