--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,13 +37,13 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       
-    - name: Get Allure history
-      uses: actions/checkout@v3
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
+    #- name: Get Allure history
+    #  uses: actions/checkout@v3
+    #  if: always()
+    #  continue-on-error: true
+    #  with:
+    #    ref: gh-pages
+    #    path: gh-pages
         
     - name: Generate Allure Report
       uses: simple-elf/allure-report-action@v1.8
@@ -54,15 +54,37 @@ jobs:
          gh_pages: gh-pages
          allure_report: allure-report
          allure_history: allure-history
-         
-    - name: Publish Allure Report
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Build with Jekyll
+      uses: actions/jekyll-build-pages@v1
+      with:
+          source: ./
+          destination: ./_site
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       if: always()
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_branch: gh-pages
-        publish_dir: allure-history 
+        path: 'allure-history'
+         
+    #- name: Publish Allure Report
+    #  uses: peaceiris/actions-gh-pages@v3
+    #  if: always()
+    #  with:
+    #    github_token: ${{ secrets.GITHUB_TOKEN }}
+    #    publish_branch: gh-pages
+    #    publish_dir: allure-history
+    
+  deploy:
+      environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+      runs-on: ubuntu-latest
+      if: always()
+      permissions:
+        pages: write
+        id-token: write
+      needs: build
+      steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
         
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
