--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
          allure_history: allure-history
     - name: Build with Jekyll
       uses: actions/jekyll-build-pages@v1
+      if: always()
       with:
           source: ./
           destination: ./_site
