--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,11 @@ jobs:
       uses: simple-elf/allure-report-action@v1.8
       if: always()
       id: allure-report
-      with:
-         allure_results: allure-results
-         gh_pages: gh-pages
-         allure_report: allure-report
-         allure_history: allure-history
+      #with:
+      #   allure_results: allure-results
+      #   gh_pages: gh-pages
+      #   allure_report: allure-report
+      #   allure_history: allure-history
     - name: Build with Jekyll
       uses: actions/jekyll-build-pages@v1
       if: always()
