--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Docker Setup
       run: docker --version
       
-    - name: Start Docker
-      run: docker-compose -f docker-compose-v3.yml up -d
+    #- name: Start Docker
+    #  run: docker-compose -f docker-compose-v3.yml up -d
       
     - name: Build with Maven
       run: mvn clean install
