--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,23 +37,23 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       
-    #- name: Get Allure history
-    #  uses: actions/checkout@v3
-    #  if: always()
-    #  continue-on-error: true
-    #  with:
-    #    ref: gh-pages
-    #    path: gh-pages
+    - name: Get Allure history
+      uses: actions/checkout@v3
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
         
     - name: Generate Allure Report
       uses: simple-elf/allure-report-action@v1.8
       if: always()
       id: allure-report
-      #with:
-      #   allure_results: allure-results
-      #   gh_pages: gh-pages
-      #   allure_report: allure-report
-      #   allure_history: allure-history
+      with:
+         allure_results: allure-results
+         gh_pages: gh-pages
+         allure_report: allure-report
+         allure_history: allure-history
     - name: Build with Jekyll
       uses: actions/jekyll-build-pages@v1
       if: always()
