--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,13 +37,13 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       
-    - name: Get Allure history
-      uses: actions/checkout@v3
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
+    #- name: Get Allure history
+    #  uses: actions/checkout@v3
+    #  if: always()
+    #  continue-on-error: true
+    #  with:
+    #    ref: gh-pages
+    #    path: gh-pages
         
     - name: Generate Allure Report
       uses: simple-elf/allure-report-action@v1.8
