--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Docker Setup
-      run: docker --version
+    #- name: Docker Setup
+    #  run: docker --version
       
     #- name: Start Docker
     #  run: docker-compose -f docker-compose-v3.yml up -d
